# nmavail

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
.trae/rules/: ai-commit-guidelines.md  english.md
namok/: checker.py  cli.py  config.py
nmavail/: checker.py  cli.py  config.py
nmck/: checker.py  cli.py  config.py
