[project]
name = "namok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "click",
    "python-whois",
    "dnspython",
    "rich",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
namok = "namok.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "ARG", "PTH"
]
fixable = ["ALL"]
ignore = ["E501", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# VS Code/Windsurf Python environment configuration
[tool.vscode]
python.terminal.activateEnvironment = true
python.workspaceSearchPaths = ["./**/.venv"]
python.terminal.autoActivationType = "shellStartup"
